--- a/index.html
+++ b/index.html
@@ -29,6 +29,8 @@
 
         <button onclick="load()">Load</button>
         <br>
+        <a href="https://github.com/hemisemidemipresent/complex3">github</a>
+        <br>
         <a href="https://hemisemidemipresent.github.io/complex2/">previous
             attempt at graphing</a>
         <br>
