--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="css/main.css">
 </head>
 
-<body>s
+<body>
     <div id="container"></div>
     <div id="title">
         <p>
@@ -23,7 +23,7 @@
             <br>
             and return the value as if you are writing a function (because you are)
             <br>
-            <input id="fn" type="text" value="return input.pow(3).div(100).add(new Complex(1,1))">
+            <textarea id="fn" type="text">return input.pow(3).div(100).add(new Complex(1,1))</textarea>
         </p>
         <p id="err"></p>
 
