--- a/index.html
+++ b/index.html
@@ -4,8 +4,11 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="description" content="Complex function grapher">
+    <meta name="keywords" content="complex, function, website, JavaScript">
+    <meta name="author" content="hemisemidemipresent, hemidemisemipresent">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Complex Function Grapher</title>
     <link rel="stylesheet" href="css/main.css">
     <link rel="stylesheet" href="css/switch.css">
 
