optimized reloading by like 0.00001%

--- a/index.html
+++ b/index.html
@@ -38,11 +38,11 @@
                 <input type="checkbox" id="checkbox">
                 <span class="slider round"></span>
             </label>
-            <p>Mod-Arg</p>
+            <p>Mod-Arg (you need to press "Load" to change)</p>
         </div>
 
         <br>
-        <button onclick="load()">Load</button>
+        <button onclick="load()" id="loadBtn">Load</button>
         <br>
         <a href="https://github.com/hemisemidemipresent/complex3">github</a>
         <br>
