--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         <button onclick="toggleRot()" class="btn">Toggle rotation</button>
 
         <br>
-        <a id="gh" href="https://github.com/hemisemidemipresent/complex3">github</a>
+        <a id="gh" href="https://github.com/hemisemidemipresent/complex3">Github</a>
     </div>
     <div id="book">
         <button class="icon" onclick="toggleBook() "><i class="fas fa-book fa-2x"></i></button>
