--- a/index.html
+++ b/index.html
@@ -39,7 +39,8 @@
             <option value="Mod-Arg">Mod-Arg</option>
         </select>
         <div id='gpu'>
-            <label for="gpuLevel">How good is your GPU/How accurate do you want the graph on a scale: <br> from 1 (bad)
+            <label for="gpuLevel">How good is your device/How accurate do you want the graph on a scale: <br> from 1
+                (bad)
                 to *insert big
                 number*
                 (NASA):</label>
