trigamma and stuff

--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
         <button onclick="toggleRot()" class="btn" id="rotBtn">Rotate On</button>
         <button onclick="toggleShiny()" class="btn" id="shineBtn">Shine Off</button>
         <button onclick="toggleBW()" class="btn" id="bwBtn">Switch to color</button>
+        <button onclick="toggleOrth()" class="btn" id="bwBtn">see top</button>
 
         <br>
         <a id="gh" href="https://github.com/hemisemidemipresent/complex3">Star this project on Github</a>
@@ -66,8 +67,7 @@
         <p>E: exp,ln</p>
         <p>Roots: sqrt,cbrt</p>
         <p>Misc: conj,inv,Re,Im,mod (or norm),arg</p>
-        <p>Gamma: lngamma,gamma,digamma,trigamma, and<br>polygamma (accepts 2 inputs, second input is m - read
-            more <a href="https://en.wikipedia.org/wiki/Polygamma_function">here</a>)</p>
+        <p>Gamma: lngamma,gamma,digamma,trigamma</p>
         <p>Zeta: zeta,zetac(accepts 2 inputs, second input is how precise it is)<br>It is reccomended that you do
             something like zeta(3*z) (btw default zeta is at 25)</p>
 
