--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         </div>
         <div id="txtBtns">
             <button onclick="load()" class="btn">Load</button>
-            <button onclick="toggleLog()" class="btn" id="rotBtn">Rotate On</button>
+            <button onclick="toggleRot()" class="btn" id="rotBtn">Rotate On</button>
 
             <button onclick="toggleShiny()" class="btn" id="shineBtn">Shine Off</button>
             <button onclick="toggleBW()" class="btn" id="bwBtn">Switch to color</button>
