--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
         <p>Inverse Trigonometric: asin,acos,atan,acsc,asec,acot</p>
         <p>Hyperbolic Trigonometric: sinh,cosh,tanh,csch,sech,coth</p>
         <p>Inverse Hyperbolic Trigonometric: asinh,acosh,atanh,acsch,asech,acoth</p>
-        <p>E: exp,ln</p>
+        <p>E: ln,exp(significantly faster than e^z)</p>
         <p>Roots: sqrt,cbrt</p>
         <p>Misc: conj,inv,Re,Im,mod (or norm),arg</p>
         <p>Gamma: lngamma,gamma,digamma,trigamma</p>
