added github btn

--- a/index.html
+++ b/index.html
@@ -106,6 +106,8 @@
                     </g>
                 </g>
             </svg></button>
+        <a href="https://github.com/hemisemidemipresent/complex3"><button class="icon"><i
+                    class="fab fa-github fa-2x"></i></button></a>
 
     </div>
 </body>
